# rune-cfg

./: .gitignore  Cargo.toml  README.md
docs/: language-server.md
editors/nvim/: README.md
editors/tree-sitter-rune/: README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
editors/tree-sitter-rune/queries/: folds.scm  highlights.scm  indents.scm  injections.scm
editors/tree-sitter-rune/src/: grammar.json  node-types.json  parser.c
editors/tree-sitter-rune/test/corpus/: config.txt  schema.txt
editors/vim/: README.md
editors/vim/ftdetect/: rune.vim
editors/vim/syntax/: rune.vim
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: rune.tmLanguage.json
examples/: defaults.rune  example.rune  schema.rune  schema_config_invalid.rune  schema_config_valid.rune  schema_validation.rs
src/: ast.rs  diagnostic.rs  error.rs  export.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  schema.rs  utils.rs
src/config/: access.rs  conversion.rs  helpers.rs  mod.rs  tests.rs  validation.rs
src/lexer/: mod.rs  scanner.rs  tests.rs  tokenizer.rs
src/lsp/: mod.rs  server.rs
src/parser/: conditional.rs  document.rs  mod.rs  reference.rs  tests.rs  value.rs
