[package]
name = "rune-cfg"
version = "0.1.33"
edition = "2024"
authors = ["Dustin Pilgrim <dustin.pilgrim1997@gmail.com>"]
description = "A modern, simple, and safe config language inspired by Markdown."
license = "MIT"
repository = "https://github.com/saltnpepper97/rune-cfg"
documentation = "https://docs.rs/rune-cfg"
keywords = ["config", "rune", "parser", "serde", "dsl"]
categories = ["config", "parsing"]
readme = "README.md"
rust-version = "1.89"

[dev-dependencies]
tempfile = "3.23.0"

[dependencies]
indexmap = "2.12.0"
once_cell = "1.21.3"
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.1"
