[package]
name = "rune-cfg"
version = "0.4.2"
edition = "2024"
authors = ["Dustin Pilgrim <dustin.pilgrim1997@gmail.com>"]
description = "A modern, simple, and safe config language inspired by Markdown."
license = "GPL-3.0-or-later"
repository = "https://github.com/saltnpepper97/rune-cfg"
documentation = "https://docs.rs/rune-cfg"
keywords = ["config", "rune", "parser", "serde", "dsl"]
categories = ["config", "parsing"]
readme = "README.md"
rust-version = "1.89"

[dev-dependencies]
tempfile = "3.25.0"

[dependencies]
dirs = "6.0.0"
indexmap = "2.13.0"
once_cell = "1.21.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.1"
